[gd_scene load_steps=15 format=3 uid="uid://bsrgy47skt0dq"]

[ext_resource type="Script" path="res://scenes/menus/game_menu/game_menu.gd" id="1_moilo"]
[ext_resource type="PackedScene" uid="uid://i8t04i3pu053" path="res://scenes/enemy_AI/enemy_AI.tscn" id="2_svb7b"]
[ext_resource type="Script" path="res://scenes/menus/game_menu/battlefield.gd" id="3_70k0e"]
[ext_resource type="PackedScene" uid="uid://qlvpdxknnqsp" path="res://scenes/base/base.tscn" id="3_v2rvl"]
[ext_resource type="Texture2D" uid="uid://d1apvpyhli44c" path="res://addons/free-coin-icon-794-thumb.png" id="6_xbff3"]
[ext_resource type="Texture2D" uid="uid://bdaoovccsps1n" path="res://sprites/Troops/Slime/Slime Portrati.png" id="7_bta4p"]
[ext_resource type="Texture2D" uid="uid://b2otnrmcof7o2" path="res://addons/pixel-art-cloud-background [photoutils.com] (2).png" id="7_tkhtq"]
[ext_resource type="Texture2D" uid="uid://be6wedlgc7ahh" path="res://sprites/Troops/Knight/knight portrait.png" id="8_s6uwo"]
[ext_resource type="Theme" uid="uid://bnhngmri4tfgr" path="res://Theme/FlatUI4/kenneyUI-green.tres" id="9_ruhha"]
[ext_resource type="Texture2D" uid="uid://c1wcihr2i4tdn" path="res://sprites/Troops/Troll/Troll portarit.png" id="10_tou17"]
[ext_resource type="Texture2D" uid="uid://px1owfda885e" path="res://sprites/red-up arrow.png" id="11_dpk7h"]
[ext_resource type="AudioStream" uid="uid://u3hkr1gpgmcj" path="res://addons/fight.wav" id="17_rfoq2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_64j8a"]
bg_color = Color(0.813638, 0.524132, 0.267163, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3istf"]
size = Vector2(52.4782, 3.07234)

[node name="GameMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_moilo")

[node name="NonUI" type="Node" parent="."]

[node name="Friend_Troop_Container" type="Node2D" parent="NonUI"]

[node name="Enemy_Troop_Container" type="Node2D" parent="NonUI"]

[node name="EnemyAI" parent="NonUI" instance=ExtResource("2_svb7b")]

[node name="BackgroundImage" type="TextureRect" parent="."]
z_index = -14
layout_mode = 0
offset_right = 1154.0
offset_bottom = 553.0
texture = ExtResource("7_tkhtq")

[node name="VBoxScreenLayout" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 40.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(28.8501, 16.2742)
theme_override_constants/separation = -31
metadata/_edit_use_anchors_ = true

[node name="Battlefield" type="Node2D" parent="VBoxScreenLayout"]
script = ExtResource("3_70k0e")

[node name="Friend_Base" parent="VBoxScreenLayout/Battlefield" instance=ExtResource("3_v2rvl")]
z_index = -5
position = Vector2(3.12, 40)
scale = Vector2(0.081, 0.309)

[node name="Enemy_Base" parent="VBoxScreenLayout/Battlefield" instance=ExtResource("3_v2rvl")]
z_index = -5
position = Vector2(36.915, 40)
scale = Vector2(0.081, 0.309)

[node name="Base_Burn_Timer" type="Timer" parent="VBoxScreenLayout/Battlefield"]
wait_time = 3.0

[node name="CommandPanel" type="Panel" parent="VBoxScreenLayout"]
custom_minimum_size = Vector2(0, 6)
layout_mode = 2
size_flags_vertical = 10
theme_override_styles/panel = SubResource("StyleBoxFlat_64j8a")

[node name="StaticBody2D" type="StaticBody2D" parent="VBoxScreenLayout/CommandPanel"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="VBoxScreenLayout/CommandPanel/StaticBody2D"]
position = Vector2(21.6637, 1.57779)
shape = SubResource("RectangleShape2D_3istf")

[node name="game_time" type="Sprite2D" parent="VBoxScreenLayout/CommandPanel"]
position = Vector2(32.5129, 2.62238)
scale = Vector2(0.00402864, 0.00584581)

[node name="Label" type="Label" parent="VBoxScreenLayout/CommandPanel/game_time"]
offset_left = -696.913
offset_top = -115.624
offset_right = 26.083
offset_bottom = 157.376
theme_override_font_sizes/font_size = 150
text = "Time: 0"
metadata/_edit_use_anchors_ = true

[node name="total_gold" type="Sprite2D" parent="VBoxScreenLayout/CommandPanel"]
position = Vector2(37.7468, 2.68383)
scale = Vector2(0.00402864, 0.00584581)
texture = ExtResource("6_xbff3")

[node name="Label" type="Label" parent="VBoxScreenLayout/CommandPanel/total_gold"]
offset_left = -972.238
offset_top = -105.113
offset_right = -249.242
offset_bottom = 167.887
theme_override_font_sizes/font_size = 150
text = "Gold: 50"
metadata/_edit_use_anchors_ = true

[node name="q_cost" type="Sprite2D" parent="VBoxScreenLayout/CommandPanel"]
position = Vector2(3.23604, 4.79501)
scale = Vector2(0.00207972, 0.00280198)
texture = ExtResource("6_xbff3")

[node name="Label" type="Label" parent="VBoxScreenLayout/CommandPanel/q_cost"]
anchors_preset = -1
anchor_top = 0.127674
anchor_bottom = 0.127674
offset_left = -1233.33
offset_top = -218.877
offset_right = 249.668
offset_bottom = 110.123
theme_override_font_sizes/font_size = 200
text = "Q Cost"

[node name="w_cost" type="Sprite2D" parent="VBoxScreenLayout/CommandPanel"]
position = Vector2(6.87557, 4.79501)
scale = Vector2(0.00207972, 0.00280198)
texture = ExtResource("6_xbff3")

[node name="Label" type="Label" parent="VBoxScreenLayout/CommandPanel/w_cost"]
anchors_preset = -1
anchor_top = 0.127674
anchor_bottom = 0.127674
offset_left = -1233.33
offset_top = -218.877
offset_right = 249.668
offset_bottom = 110.123
theme_override_font_sizes/font_size = 200
text = "W Cost"

[node name="e_cost" type="Sprite2D" parent="VBoxScreenLayout/CommandPanel"]
position = Vector2(10.5496, 4.85653)
scale = Vector2(0.00207972, 0.00280198)
texture = ExtResource("6_xbff3")

[node name="Label" type="Label" parent="VBoxScreenLayout/CommandPanel/e_cost"]
anchors_preset = -1
anchor_top = 0.127674
anchor_bottom = 0.127674
offset_left = -1233.33
offset_top = -218.877
offset_right = 249.668
offset_bottom = 110.123
theme_override_font_sizes/font_size = 200
text = "E Cost"

[node name="r_cost" type="Sprite2D" parent="VBoxScreenLayout/CommandPanel"]
position = Vector2(14.1893, 4.85653)
scale = Vector2(0.00207972, 0.00280198)
texture = ExtResource("6_xbff3")

[node name="Label" type="Label" parent="VBoxScreenLayout/CommandPanel/r_cost"]
anchors_preset = -1
anchor_top = 0.127674
anchor_bottom = 0.127674
offset_left = -1233.33
offset_top = -218.877
offset_right = 249.668
offset_bottom = 110.123
theme_override_font_sizes/font_size = 200
text = "R Cost"

[node name="f_cost" type="Sprite2D" parent="VBoxScreenLayout/CommandPanel"]
position = Vector2(17.8271, 4.85645)
scale = Vector2(0.00207972, 0.00280198)
texture = ExtResource("6_xbff3")

[node name="Label" type="Label" parent="VBoxScreenLayout/CommandPanel/f_cost"]
anchors_preset = -1
anchor_top = 0.127674
anchor_bottom = 0.127674
offset_left = -1233.33
offset_top = -218.877
offset_right = 249.67
offset_bottom = 110.123
theme_override_font_sizes/font_size = 200
text = "F Cost"

[node name="GoldTimer" type="Timer" parent="VBoxScreenLayout/CommandPanel"]
autostart = true

[node name="HBoxButtonLayout" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 23.0
offset_top = 567.0
offset_right = 1948.0
offset_bottom = 802.0
scale = Vector2(0.2, 0.2)
theme_override_constants/separation = 175

[node name="Q_Button" type="Button" parent="HBoxButtonLayout"]
custom_minimum_size = Vector2(350, 225)
layout_mode = 2
size_flags_vertical = 0
theme = ExtResource("9_ruhha")
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 80
text = "Q"

[node name="TextureRect" type="TextureRect" parent="HBoxButtonLayout/Q_Button"]
layout_mode = 0
offset_left = 50.0
offset_top = -75.0
offset_right = 275.0
offset_bottom = 185.0
texture = ExtResource("7_bta4p")

[node name="W_Button" type="Button" parent="HBoxButtonLayout"]
custom_minimum_size = Vector2(350, 225)
layout_mode = 2
size_flags_vertical = 0
theme = ExtResource("9_ruhha")
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 80
text = "W"

[node name="TextureRect" type="TextureRect" parent="HBoxButtonLayout/W_Button"]
layout_mode = 0
offset_left = 40.0
offset_right = 325.0
offset_bottom = 220.0
texture = ExtResource("8_s6uwo")

[node name="E_Button" type="Button" parent="HBoxButtonLayout"]
custom_minimum_size = Vector2(350, 225)
layout_mode = 2
size_flags_vertical = 0
theme = ExtResource("9_ruhha")
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 80
text = "E"

[node name="TextureRect" type="TextureRect" parent="HBoxButtonLayout/E_Button"]
layout_mode = 0
offset_left = 45.0
offset_top = 15.0
offset_right = 290.0
offset_bottom = 205.0
texture = ExtResource("10_tou17")

[node name="R_Button" type="Button" parent="HBoxButtonLayout"]
custom_minimum_size = Vector2(350, 225)
layout_mode = 2
size_flags_vertical = 0
theme = ExtResource("9_ruhha")
theme_override_colors/font_color = Color(0.277656, 0.499023, 1, 1)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 150
text = "⬆️"

[node name="TextureRect" type="TextureRect" parent="HBoxButtonLayout/R_Button"]
layout_mode = 0
offset_left = 120.0
offset_top = 15.0
offset_right = 240.0
offset_bottom = 195.0
texture = ExtResource("11_dpk7h")
expand_mode = 1

[node name="F_Button" type="Button" parent="HBoxButtonLayout"]
custom_minimum_size = Vector2(350, 225)
layout_mode = 2
size_flags_vertical = 0
theme = ExtResource("9_ruhha")
theme_override_colors/font_color = Color(0.277656, 0.499023, 1, 1)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 150
text = "⬆️"

[node name="TextureRect" type="TextureRect" parent="HBoxButtonLayout/F_Button"]
layout_mode = 0
offset_left = 120.0
offset_top = 15.0
offset_right = 240.0
offset_bottom = 195.0
texture = ExtResource("11_dpk7h")
expand_mode = 1

[node name="BGM" type="Node" parent="."]

[node name="Fight" type="AudioStreamPlayer" parent="BGM"]
stream = ExtResource("17_rfoq2")
volume_db = -10.0
autoplay = true
bus = &"BGM"

[connection signal="timeout" from="VBoxScreenLayout/Battlefield/Base_Burn_Timer" to="." method="_on_base_burn_timer_timeout"]
[connection signal="timeout" from="VBoxScreenLayout/CommandPanel/GoldTimer" to="." method="_on_add_gold_timer_timeout"]
[connection signal="pressed" from="HBoxButtonLayout/Q_Button" to="." method="_on_key_pressed" binds= ["Summon_1"]]
[connection signal="pressed" from="HBoxButtonLayout/W_Button" to="." method="_on_key_pressed" binds= ["Summon_2"]]
[connection signal="pressed" from="HBoxButtonLayout/E_Button" to="." method="_on_key_pressed" binds= ["Summon_3"]]
[connection signal="pressed" from="HBoxButtonLayout/R_Button" to="." method="_on_key_pressed" binds= ["Lab_purchase"]]
[connection signal="pressed" from="HBoxButtonLayout/F_Button" to="." method="_on_key_pressed" binds= ["Gold_Mine_purchase"]]
[connection signal="finished" from="BGM/Fight" to="." method="_on_fight_bgm_finished"]
